feat: separate routers and models to different folder
