# src/portal/app/models/__init__.py
@@ -1,0 +1,2 @@
+from .todo import *
+from .system import *
